--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 
     <!-- Style -->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- JavaScript -->
     <script defer src="js/script.js"></script>
