--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script defer src="js/script.js"></script>
 </head>
 <body>
-    <div id="fizzbuzz-container"></div>
+    <h1 class="text-center text-white py-3 ">FizzBuzzDOM</h1>
+    <div id="fizzbuzz-container" class="container"></div>
 </body>
 </html>
